fixed vertical alignment of pdf images by using a extra element

--- a/src/beta/css/evocal.css
+++ b/src/beta/css/evocal.css
@@ -108,7 +108,6 @@ div.frame {
     left: 50%;
     margin-top: -7.5vh;
     margin-left: -10vw;
-    display: block;
 }
 
 .entry {                  
@@ -127,9 +126,16 @@ div.frame {
     -o-background-size: contain;
 }
 
+.space {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
 .entry img {
     max-width:100%;
     max-height:100%;
+    vertical-align: middle;
 }
 
 .entry:hover {
